# dynamicrouting-summary

./: .gitignore  README.md  pyproject.toml  utils.py
notebooks/: spike_rate_drift.ipynb
src/dynamicrouting_summary/: __init__.py  area_trajectories.ipynb  dataframes.py  plot_utils.py  plots.py  spike_utils.py  subjects_sessions.ipynb  utils.py
